# vgm2wav2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_full.ps1  player.py  player.spec  requirements.txt  vgm2wav2.cpp
.claude/: settings.local.json
.github/workflows/: release.yml
samples/The_Treasure_of_Usas_(MSX2)/: 01 Play Start.vgz  02 Introduction - Temple Selection.vgz  03 Pegu Ruins (Neutral).vgz  04 Pegu Ruins (Happy).vgz  05 Pegu Ruins (Angry).vgz  06 Pegu Ruins (Sad).vgz  07 Dunhuang Ruins (Neutral).vgz  10 Dunhuang Ruins (Sad).vgz  11 Alchi Ruins (Neutral).vgz  12 Alchi Ruins (Happy).vgz  13 Alchi Ruins (Angry).vgz  14 Alchi Ruins (Sad).vgz  15 Hunza Ruins (Neutral).vgz  16 Hunza Ruins (Happy).vgz  17 Hunza Ruins (Angry).vgz  18 Hunza Ruins (Sad).vgz  20 Agra Ruins (Happy).vgz  21 Agra Ruins (Angry).vgz  22 Agra Ruins (Sad).vgz  23 Boss Temple.vgz  24 Boss Fight.vgz  25 Onwards to Next Ruins.vgz  26 Ending.vgz  27 Player Dead.vgz  28 Game Over.vgz  The Treasure of Usas.m3u  The Treasure of Usas.txt
